# AxelBot

./: .gitignore  Cargo.toml  README.md  config.toml  error_log.txt
artifacts/: alpha_logreg.joblib  alpha_meta.json  alpha_xgb.joblib
data/: feature_dataset.csv
notebooks/: train_alpha_colab.ipynb
scripts/: ec2-batch-paper.sh  ec2-block-devices.json  ec2-setup.sh  export_feature_dataset.py  get_polymarket_api_creds.py  train.py
src/: backtest.rs  config.rs  dashboard.rs  execution.rs  lib.rs  main.rs  market_data.rs  news.rs  risk.rs  strategy.rs  types.rs
src/polymarket/: auth.rs  client.rs  http.rs  mod.rs  nonce.rs  replay.rs  signer.rs  types.rs  ws.rs
tests/: mock_exchange.rs
