[package]
name = "axelbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["json"] }
async-stream = "0.3"

# Polymarket CLOB integration
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# EIP-712 signing & Ethereum primitives
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-signer = "0.8"
alloy-signer-local = "0.8"

# Crypto & encoding
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.13"
